src/client/chrome/css/app.css
/* ... */
.display-favicon {
  width:25px;
  height:25px;
  margin-right: 10px;
}

.flex-row{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.previousPath {
  border-color: $banana;
}

start-time-label .end-time-label{
  font-size: 15;
  color: $electric-blue;
  width: auto;
}

.site-title{
  font-size: 35px;
  margin-right: 15px;
  color: $base-white;
  font-weight: bold;
  font-family: 'Poiret One', cursive;
}

.search-results-container {
  width: 80%;
  height: 97%;
  margin: 5px auto;
  overflow: scroll;
}

.categories-page {
  height: 92.5vh;
  display: flex;
  flex-direction: row;
}
#graph-plus-buttons{
  display: flex;
  width: 100%;
  position: absolute;
  height: 100%;
  justify-content: space-between;
}

.time-change-button {
  width:35px;
}

#time-change-btn-buffer-lft{
  width: 3px;
  min-height: 60px;
  height: calc(50% - 75px);
  position: relative;
}

#time-change-btn-buffer-rt{
  width: 3px;
  min-height: 60px;
  height: calc(50% - 80px);
  position: relative;
}

#time-change-btn-wrapper{
  position: relative;
  left:4px;
}
.arrow-btn:hover{
  color: $hover-color;
  cursor:pointer;
}

.timeline-label-row{
  width: 100%;
}

#slider-wrapper{
  width:30%;
  margin-left: 30px;
}

.jump-btn{
  background-color: #4897D8;
  padding: 6px 12px;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.42857143;
  text-align: center;
  vertical-align: middle;
  color: #FAFAFA;
}
.jump-btn:hover{
  background-color: $electric-blue-dark;
  cursor:pointer;
}

#lookback-slider{
  background-color: #FAFAFA;
}

.ant-slider{
  border-top-color: #FAFAFA;
  border-bottom-color: #FAFAFA;
}

#timeline-label-row-top{
  height: 40px;
  display: flex;
  align-items: center;
}

#timeline-label-row-btm{
  display: flex;
  flex-direction: row;
  align-items: center;
}

.time-labels{
  margin: 10px 15px 0px 15px;
  height: 80px;
  min-width: 800px;
}
#time-break-min-box-left{
  position:relative;
  float:left;
  width:calc(33% - 190px);
  min-width:1px;
}

#time-break-min-box-right{
  position:relative;
  float:left;
  width:26%;
  min-width:1px;
}

#time-break-line-label1, #time-break-line-label2{
  position: relative;
}


#end-date-label{
  margin-left: auto;
}

#time-break-container{
  height:100%;
  width:100%;
  z-index:1;
  position:absolute;
  display: flex;
}

#tabs-container{
  height:100%;
  width:100%;
  z-index:10;
  position:relative;
}

.time-break-line{
  height:100%;
  border-right: 1px solid $banana;
  position:relative;
  z-index: 1;
}

#first-time-break{
  width: 33%;
  float:left;
}

#second-time-break{
  width: 33%;
  float: left;
}


.nav-bar-button {
  border: none;
  background-color: $electric-blue;
  color: $banana;
  margin: 10px;
  margin-top: 15px;
  font-size: medium;
  padding: 0px;
  outline: none;
}
.nav-bar-button:hover {
  color: $base-white;
}
.nav-bar-button-selected {
  color: $base-white;
  border-bottom: solid $base-white 1px;
  padding: 0px;
}

.control-buttons{
  display: block;
  color: $canteloupe;
  font-weight: bold;
}

.checkbox {
  text-align: center;
}

.nav-bar-container {
  display: flex;
  justify-content: space-between;
  background-color: $electric-blue;
}

.nav-menu-bar {
  display: flex;
  width: 100%;
  justify-content: flex-start;
}

.search-bar {
  margin: 7px 10px;
  border-radius: 10px;
  border: none;
  min-width: 200px;
  height: 35px;
  padding: 10px;
  outline: none;
}
.blacklist-text-entry {
  margin: 3px 5px;
  border-radius: 4px;
  border: none;
  width: 98%;
}
.all-categories {
  overflow: scroll;
}

.section-title {
  font-size: 20px;
  margin: 10px;
  color: $canteloupe;
}

.selected-domain-bar {
  margin-top: 5%;
  width: 95%;
  border: $electric-blue solid;
  border-left:none;
  float: none;
  margin-left: 2%;
  margin-right: 2%;
  height: 100px;
  border-radius: 5px;
  display:absolute;
  flex-flow: row nowrap;
  z-index: inherit;
}

.page-bar{
  border-left: solid $electric-blue;
  height:100%;
  display:inline-block;
  margin: 0;
}

.close-detail-view-btn{
  float: right;
  margin-top: 10px;
  margin-right: 30px;
  border: #FAFAFA;
  background-color: #FAFAFA;
  padding-top: 0px;
  padding-bottom: 0px;
  vertical-align: middle;
  font-size: xx-large;
}

.category-entry-wrapper{
  width: 50%;
}

.domainBar-zoom-container{
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.hidden { display:none; }

.error_message { color: blue; }

.delete-category-button {
  float: right;
  color: $canteloupe;
  width: 15px;
  height: 25px;
  line-height: 25px;
}

.edit-category-button {
  color: $canteloupe;
  width: 15px;
  height: 25px;
  line-height: 25px;
}

.edit-category-input {
  height: 20px;
  width: 150px;
}

.category-title {
  color: $canteloupe;
  text-align: center;
  width: 150px;
}

.side-bar-category{
  width: 100%;
  height: 25px;
  display: flex;
  line-height: 25px;
  border-bottom: solid thin $canteloupe;
  justify-content: space-between;
}

.checked {
  background-color: $banana;
}

.date-picker {
  width:165px;
  position: relative;
}

.edit-category-entry {
  textarea {
    width: 150px;
    border: none;
    background-color: $light-blue;
    text-align: center;
  }
}

#loading_page {
  display: table;
  margin: 20px 40%;
}

.star-display{
  margin-top: 10px;
}

.display-view {
  width:50%;
  margin: 0 auto;
  margin-bottom: 10px;
}

.page-details{
  height: 40%;
}

.watermelon {
  background-color: $watermelon;
  color: $base-white;
  &:hover {
    background-color: $watermelon-dark;
    color: $base-white;
  }
  &:focus{
    color: $base-white;
  }
}

.watermelon-border {
  border: solid 2px $watermelon;
}

.canteloupe {
  background-color: $canteloupe;
  color: white;
  &:hover {
    border: $canteloupe-dark;
    background-color: $canteloupe-dark;
  }
}

.canteloupe-border {
  border: solid 2px $canteloupe;
}

.lime {
  background-color: $lime;
  color: white;
  &:hover {
    border: $lime-dark;
    background-color: $lime-dark;
  }
}
/* ... */

